MDEV-7920 main.group_min_max fails in buildbot with valgrind